# STIKS

./: .gitignore  BACKEND_CHECKLIST.md  Dockerfile  INTRO.md  README.md  docker-compose.yml  jest.config.ts  jest.setup.js  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: ci-cd.yml
__tests__/api/: products.test.ts
app/: globals.css  layout.tsx  page.tsx
app/analytics/: page.tsx
app/app/: layout.tsx  page.tsx
app/connect/: page.tsx
app/dashboard/: page.tsx
app/disclaimer/: page.tsx
app/docs/: page.tsx
app/governance/: page.tsx
app/learn/: page.tsx
app/privacy/: page.tsx
app/products/: page.tsx
app/terms/: page.tsx
backend/: .gitignore  package.json  tsconfig.json
backend/rust-service/: Cargo.toml  Dockerfile
backend/rust-service/src/: auth.rs  error.rs  main.rs  solana.rs  types.rs
backend/src/: app.ts
components/: footer.tsx  hero-section.tsx  navbar.tsx  product-card.tsx  stats-section.tsx
components/app/: analytics-chart.tsx  app-header.tsx  app-sidebar.tsx  asset-allocation.tsx  folder-list.tsx  market-correlation.tsx  market-overview.tsx  organized-assets.tsx  performance-chart.tsx  performance-metrics.tsx  portfolio-card.tsx  portfolio-chart.tsx  portfolio-stats.tsx  portfolio-summary.tsx  product-card.tsx  quick-actions.tsx  recent-transactions.tsx  risk-assessment.tsx  tag-manager.tsx
docs/: api-spec.yaml
lib/api/: middleware.ts  rate-limit.ts
lib/supabase/: client.ts
lib/types/: index.ts
lib/utils/: logger.ts
supabase/: config.toml
supabase/migrations/: 20240101000000_initial_schema.sql  (+1 more)
(+31 files in other folders)
